Fixing spacing for section leaders part of section pages

--- a/app/css/sections.sass
+++ b/app/css/sections.sass
@@ -82,9 +82,10 @@ $description-font-size: 18pt
 
 .section-leaders-content
   display: flex
-  justify-content: space-around
+  justify-content: space-evenly
   align-items: center
   width: 100vw
+  margin-top: 4rem
   .section-leader
     width: 20%
     .section-leader-photo
@@ -94,9 +95,12 @@ $description-font-size: 18pt
     p
       text-align: center
       font-size: $description-font-size
+      margin: 0
+      margin-top: 1rem
     h3
       text-align: center
       padding: 0
+      margin-top: 1rem
 
 .section-traditions
   display: flex
